[package]
name = "tendermint_light_client"
version = "0.1.1"
authors = ["Parth Desai <desaiparth08@gmail.com>", "Joe Bowman <joe@chorus.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
serde = "1.0"
anomaly = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
serde_derive = "1.0"
subtle = "2.2"
thiserror = "1.0.19"
signatory = { version = "0.19.0", features = ["ed25519", "ecdsa", "k256"], git = "https://github.com/joe-bowman/signatory.git", branch = "develop" }
signatory-dalek = { version = "0.19.1", git = "https://github.com/joe-bowman/signatory.git", branch = "develop" }
ripemd160 = "0.8.0"
serde_repr = "0.1.5"
sha2 = { version = "0.8", default-features = false }
prost-amino = "0.5.0"
prost-amino-derive = "0.5.0"

[dev-dependencies]
serde_json = "1"
