
[package]
name = "tendermint_light_client"
version = "0.4.0"
authors = ["Parth Desai <desaiparth08@gmail.com>", "Joe Bowman <joe@chorus.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
serde = "1.0"
anomaly = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
serde_derive = "1.0"
subtle = "2.2"
thiserror = "1.0.19"
k256 = { version = "0.7.2", features = ["ecdsa"] }
elliptic-curve = "0.8.4"
ed25519-dalek = "1.0.1"
ripemd160 = "0.8.0"
serde_repr = "0.1.5"
sha2 = { version = "0.8", default-features = false }
prost-amino = "0.5.0"
prost-amino-derive = "0.5.0"
# Just to compile in wasm
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }

[dev-dependencies]
serde_json = "1"
rand = "0.7.3"
